--- a/src/Styles/Component-Styles/Footer-Styles/FooterStyles.css
+++ b/src/Styles/Component-Styles/Footer-Styles/FooterStyles.css
@@ -99,6 +99,11 @@
   -webkit-box-reflect: below -8px linear-gradient(transparent, rgba(0,0,0,0.07), rgba(255,255,255,0.42));
 }
 
+/* Disable expensive reflections during scroll */
+[data-scrolling="true"] #footer-content {
+  -webkit-box-reflect: none !important;
+}
+
 .social-icon {
   margin: 0;
   padding: 0;
