--- a/src/Styles/Page-Styles/AboutMe-Styles/Intro-Styles/AboutIntroStyles.css
+++ b/src/Styles/Page-Styles/AboutMe-Styles/Intro-Styles/AboutIntroStyles.css
@@ -103,6 +103,7 @@
   font-size: calc(1.775rem + 1.5vw);
   font-weight: var(--font-weight-bold);
   background: var(--gradient-brand-horizontal);
+  padding: 0.25rem;
   background-clip: text;
   -webkit-background-clip: text;
   color: transparent;
