--- a/src/Styles/Page-Styles/Skills-Styles/SkillsStyles.css
+++ b/src/Styles/Page-Styles/Skills-Styles/SkillsStyles.css
@@ -56,6 +56,7 @@
   font-size: calc(1.775rem + 1.5vw);
   font-weight: var(--font-weight-bold);
   background: var(--gradient-brand-horizontal);
+  padding: 0.25rem;
   -webkit-background-clip: text;
   background-clip: text;
   color: transparent;
